# SWAMP

./: .pre-commit-config.yaml  README.md  alexi-et-missing.py  dl.py  environment-dev.yml  example.ipynb  make-alexi-archive-nc.py  maxmoist.py  pyproject.toml  setup.cfg  swamp.py  try-oa.py
ALEXI/: runalexi
MAIN_CRN/: create_crn.ncl  crn_daily_update.sh  downftp  getvegsoilnc4swamp  runscript  setcase.csh  soil_properties.txt  soil_water_o.txt  stationID_lat_lon.txt
PRISM/: downprism  runprism
PROCESS_DAILY/: Air_temp_grid.ncl  Smois_20cm_grid.ncl  Smois_50cm_grid.ncl  Soil_moisture_model_grid_2v.ncl  Soil_moisture_model_grid_index.ncl  Soiltemp_05cm_grid.ncl  Soiltemp_20cm_grid.ncl  Soiltemp_50cm_grid.ncl  Solar_grid.ncl  Sur_temp_min_grid.ncl  Temp_max_grid.ncl  minmax_2010.txt  minmax_2011.txt  minmax_2015.txt  minmax_2018.txt  presm_fits.txt  runit  swamp.f  swampi.f
PROCESS_DAILY_STATION/: Air_temp_grid.ncl  RH_grid.ncl  Smois_05cm_grid.ncl  Smois_100cm_grid.ncl  Smois_20cm_grid.ncl  Soiltemp_05cm_grid.ncl  Soiltemp_20cm_grid.ncl  Solar_grid.ncl  Sur_temp_min_grid.ncl  Temp_min_grid.ncl  runit  statmatch.f
orig/: README.md
orig/MAIN_CRN/: create_crn.ncl  crn_daily_update.sh  downftp  module_file  runscript  soil_water.txt
orig/PRISM/: bil2nc
orig/PROCESS_DAILY/: Avail_water_depth_grid.ncl  Fract_avail_water_grid.ncl  Precip_grid.ncl  RH_grid.ncl  Smois_05cm_grid.ncl  Smois_100cm_grid.ncl  Smois_10cm_grid.ncl  minmax_2012.txt  (+13 more)
scripts/: make-alexi-archive-nc.py  maxmoist.py  try-oa.py
swamp/: __init__.py  calc.py  load.py
swampy/: calc.py  load.py
(+11 files in other folders)
